# obstacle-avoidance-car

./: .gitignore  ```markdown.md  curriculum_maps.py  demo_obstacles.py  demo_random_obstacles.py  explaination.md  map_design_document.md  new_goal_design_document.md  readme.md  record.txt  requirements.txt  run.py  show_map.py
checkpoints/stage0/: checkpoint_0001.pt  checkpoint_0002.pt  checkpoint_0003.pt  checkpoint_0004.pt  latest.pt
checkpoints/stage1/: checkpoint_0001.pt  latest.pt
logs/: ppo_steps.csv  rl_car_obs.csv  stage0_steps.csv  stage1_steps.csv
maps/road/: road_straight_8x8.yaml  (+2 more)
obstacle_environment/: __init__.py  robot_spec.py
rl_algorithms/: README.md  __init__.py  train_ppo.py
ros2_ws/install/rl_car_gazebo/share/rl_car_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rl_car_gazebo/share/rl_car_gazebo/launch/: sim.launch.py
ros2_ws/install/rl_car_gazebo/share/rl_car_gazebo/worlds/: empty.world  maze.world
ros2_ws/src/rl_car_description/: lidar.xacro  package.xml  robot.urdf  robot_core.xacro  setup.cfg  setup.py
ros2_ws/src/rl_car_description/resource/: rl_car_description
scripts/: _ckpt_utils.sh  collect_observations.py  drive_forward_and_check_sensors.py  goal_pose_publisher.py  run_drive_forward_check.sh  run_launch_and_collect_obs.sh  run_observation_builder.py  run_sim_and_smoketest.sh  smoketest.py  train_ppo_launch.sh  train_stage0_fixed_goal.sh  train_stage1_walk_empty_world.sh
tree-maker/: 20260318115321449-tree.md  20260319142601178-tree.md  20260322135707192-tree.md
(+79 files in other folders)
