<?xml version="1.0"?>
<package format="3">
  <name>rl_car_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo worlds and launch for rl car.</description>
  <maintainer email="you@example.com">liki777</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rl_car_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

